@@ -3,7 +3,7 @@ export(labkey.selectRows, labkey.executeSql, makeFilter, labkey.insertRows, labk
 	labkey.getSchemas, labkey.getQueries, labkey.getQueryViews, labkey.getQueryDetails, labkey.getDefaultViewDetails, labkey.getFolders,
 	labkey.getLookupDetails, labkey.makeRemotePath, getSession, getRows, getLookups, lsSchemas, lsFolders, lsProjects, labkey.saveBatch,
 	labkey.curlOptions, labkey.setCurlOptions, labkey.acceptSelfSignedCerts, labkey.setDefaults, labkey.domain.inferFields,
-	labkey.domain.drop, labkey.domain.get, labkey.domain.create, labkey.domain.createDesign, labkey.domain.save)
+	labkey.domain.drop, labkey.domain.get, labkey.domain.create, labkey.domain.createDesign, labkey.domain.save, labkey.setDebugMode)
 export("getSchema")
 export("getFolderPath")
 export("saveResults")
