@@ -97,7 +97,9 @@ labkey.getCSRF <- function()
                 urlBase <- paste(urlBase,"/",sep="")
             }
             myUrl <- paste(urlBase, "login/", "whoAmI.view", sep="")
-            response <- GET(url=myUrl, config=labkey.getRequestOptions())
+            options = labkey.getRequestOptions()
+            verboseOutputUrlAndOptions(myUrl, options, NULL)
+            response <- GET(url=myUrl, config=options)
             r <- processResponse(response, haltOnError=FALSE)
             json <- fromJSON(r, simplifyVector=FALSE, simplifyDataFrame=FALSE)
             if (!is.null(json$CSRF))
@@ -167,6 +169,7 @@ labkey.get <- function(myurl)
 {
     ## HTTP GET
     options <- labkey.getRequestOptions(method="GET")
+    verboseOutputUrlAndOptions(myurl, options, NULL)
     response <- GET(url=myurl, config=options)
     processResponse(response)
 }
@@ -176,12 +179,15 @@ labkey.post <- function(myurl, pbody, encoding=NULL)
 {
     ## HTTP POST form
     options <- labkey.getRequestOptions(method="POST", encoding=encoding)
+    verboseOutputUrlAndOptions(myurl, options, pbody)
     response <- POST(url=myurl, config=options, body=pbody)
     processResponse(response)
 }
 
 processResponse <- function(response, haltOnError=TRUE)
 {
+    verboseOutput("RESPONSE", content(response, "text"))
+
     ## Error checking, decode data and return
     status_code <- response$status_code
 
@@ -199,4 +205,27 @@ processResponse <- function(response, haltOnError=TRUE)
             stop (paste("HTTP request was unsuccessful. Status code = ", status_code, ", Error message = ", message, sep=""))
     }
     content(response, "text")
+}
+
+labkey.setDebugMode <- function(debug=FALSE)
+{
+    .lkdefaults[["debug"]] = debug;
+}
+
+verboseOutputUrlAndOptions <- function(myurl, options, body)
+{
+    verboseOutput("URL", myurl)
+    verboseOutput("OPTIONS", options)
+    if (!is.null(body)) {
+        verboseOutput("BODY", body)
+    }
+}
+
+verboseOutput <- function(title, content)
+{
+    if (!is.null(.lkdefaults[["debug"]]) && .lkdefaults[["debug"]] == TRUE) {
+        print(paste("*******************BEGIN ",title,"*******************", sep=""))
+        print(content)
+        print(paste("*******************END ",title,"*********************", sep=""))
+    }
 }
